--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
                 tellus pellentesque in.
               </p>
           </div>
+        </div>
       </div>
       <div class = "column small">
         <img src = "https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" />
         <div class = "news-bites">
+          <h2>NEWS BITES</h2>
           <span class = "bite">Cat Emoji Goes Viral</span>
           <span class = "bite">Buy Youtube Views</span>
           <span class = "bite">Home Business Advertising Ideas</span>
