--- a/index.html
+++ b/index.html
@@ -39,24 +39,27 @@
         <div class = "stories">
           <div class = "story">
             <h2>Orca Spends Vacation at Land World Puget</h2>
+            <div class = "story-text">
               <p> PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
                 Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
-              </p>
+              </p></div>
+          <div class = "image-story earth"><span>Earth Spins Backwards for 2017</span></div>
           </div>
-          <div class = "image-story"><span>Earth Spins Backwards for 2017</span></div>
           <div class = "story">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <div class = "story-text">
               <p> Mew York, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
                Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
-              </p>
-          </div>
-          <div class = "image-story"><span>Research Shows Cameras Erase Memory</span></div>
+             </p></div>
+          <div class = "image-story cameras"><span>Research Shows Cameras Erase Memory</span></div>
+        </div>
         </div>
       </div>
       <div class = "column medium">
         <div class = "stories">
           <div class = "story">
             <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <div class = "story-text">
               <p>
                 WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam
                 lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum
@@ -64,16 +67,17 @@
                 Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna.
                 Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus.
                 Vestibulum blandit aliquam felis...
-              </p>
+              </p></div>
           </div>
           <div class = "story">
-            <div class = "story-image"><span>Cats in Control-Is It a Thing?</span></div>
+            <div class = "image-story cats"><span>Cats in Control-Is It a Thing?</span></div>
+            <div class = "story-text">
               <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
                 aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
                 Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
                 a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo
                 tellus pellentesque in.
-              </p>
+              </p></div>
           </div>
         </div>
       </div>
