Add footer element

--- a/index.html
+++ b/index.html
@@ -94,5 +94,17 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class = "logo2">
+      <span> MY Times </span>
+    </div>
+      <nav>
+        <span><a href= "#">World</a></span>
+        <span><a href= "#">U.S.</a></span>
+        <span><a href= "#">Tech</a></span>
+        <span><a href= "#">Science</a></span>
+      </nav>
+      <div class = "copyright">&copy; 2016, My Times (A Division of Codecademy bite)<div>
+    </footer>
   </body>
 </html>
