Change some classes in footer

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
     </div>
     <footer>
       <div class = "logo2">
-      <span> MY Times </span>
-    </div>
+      <span class = "logo-name"> MY Times </span>
       <nav>
         <span><a href= "#">World</a></span>
         <span><a href= "#">U.S.</a></span>
         <span><a href= "#">Tech</a></span>
         <span><a href= "#">Science</a></span>
       </nav>
-      <div class = "copyright">&copy; 2016, My Times (A Division of Codecademy bite)<div>
+    </div>
+      <div class = "copyright">&copy; 2016, My Times (A Division of Codecademy bite)</div>
     </footer>
   </body>
 </html>
